--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>WebAdmin</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="css/styles/base/main.css" rel="stylesheet" />
     <link href="WebAdmin.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
